# self-healing-pipeline-guard

./: .editorconfig  .env.example  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .releaserc.js  .releaserc.json  .yamllint.yml  API_DOCUMENTATION.md  ARCHITECTURE.md  AUTONOMOUS_DEPLOYMENT_SUMMARY.md  AUTONOMOUS_SDLC_COMPLETION.md  AUTONOMOUS_SDLC_COMPLETION_SUMMARY.md  AUTONOMOUS_SDLC_EXECUTION_REPORT.md  AUTONOMOUS_SDLC_EXECUTION_SUMMARY.md  AUTONOMOUS_SDLC_FINAL_EXECUTION_REPORT.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_SUMMARY.md  BACKLOG.md  CHANGELOG.md  CLAUDE_IMPROVEMENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.production  Dockerfile.test  FINAL_AUTONOMOUS_SDLC_REPORT.md  GITHUB_WORKFLOWS_IMPLEMENTATION.md  IMPLEMENTATION_GUIDE.md  IMPROVEMENT_PLAN.md  MATURITY_ASSESSMENT.md  Makefile  PRODUCTION_DEPLOYMENT.md  PROJECT_CHARTER.md  QUALITY_GATES_REPORT.md  QUALITY_GATES_VALIDATION.md  QUALITY_VALIDATION_REPORT.md  README-DEPLOYMENT.md  (+57 more)
.devcontainer/: devcontainer.json  post-create.sh  post-start.sh
.github/: ISSUE_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: cd.yml  ci-cd.yml  ci.yml  dependency-update.yml  release.yml  security-scan.yml  security.yml
.terragon/: AUTONOMOUS_IMPLEMENTATION_SUMMARY.md  autonomous_executor.py  backlog.json  config.yaml  continuous_value_loop.sh  execution_log.json  loop_metrics.json  value_discovery.py
.zap/: rules.tsv
claude_improvements_20250830_235218/: error-handler.js
claude_improvements_20250830_235218/.github/workflows/: ci.yml
config/: alertmanager.yml  nginx.conf  otel-collector.yml  prometheus.yml  promtail.yml
config/grafana/dashboards/: healing-guard-overview.json
config/grafana/datasources/: prometheus.yml
config/prometheus/rules/: healing-guard.yml
deploy/: deploy.sh  global-deployment-guide.md
docs/: DEVELOPMENT.md  ROADMAP.md  SETUP_REQUIRED.md
docs/adr/: ADR-001-event-driven-architecture.md  ADR-002-python-primary-language.md
docs/ci-cd/: IMPLEMENTATION_GUIDE.md  WORKFLOWS_IMPLEMENTATION.md  WORKFLOW_TEMPLATES.md  github-workflows.md
docs/compliance/: GOVERNANCE.md  REGULATORY_COMPLIANCE.md
docs/deployment/: sentiment-analysis-deployment.md
docs/features/: sentiment-analysis.md
docs/getting-started/: overview.md  quickstart.md
docs/innovation/: ADVANCED_OPTIMIZATION.md  AI_INTEGRATION.md  INDUSTRY_LEADERSHIP.md
docs/monitoring/: alerting_strategy.md  health_checks.md
docs/operations/: DISASTER_RECOVERY.md  MONITORING_SETUP.md  PERFORMANCE_OPTIMIZATION.md  incident_response.md
docs/operations/runbooks/: incident-response.md
docs/user-guide/strategies/: overview.md
docs/workflows/: GITHUB_ACTIONS_IMPLEMENTATION.md  README.md
healing_guard/: __init__.py  cli.py
healing_guard/ai/: __init__.py  predictive_prevention.py
healing_guard/api/: __init__.py  enhanced_api.py  exceptions.py  main.py  middleware.py  realtime_dashboard.py  routes.py  sentiment_routes.py
healing_guard/compliance/: __init__.py  advanced_audit.py  ccpa_compliance.py  gdpr.py  gdpr_compliance.py  pdpa_compliance.py  unified_compliance.py
healing_guard/core/: __init__.py  advanced_scaling.py  cache.py  config.py  exceptions.py  failure_detector.py  healing_engine.py  optimization.py  quantum_planner.py  resilience.py  scaling.py  sentiment_analyzer.py  validation.py
healing_guard/distributed/: __init__.py  cluster_coordination.py
healing_guard/i18n/: __init__.py  sentiment_messages.py  translator.py
healing_guard/ml/: __init__.py  failure_pattern_recognition.py
healing_guard/models/: __init__.py  healing.py  pipeline.py
healing_guard/monitoring/: __init__.py  enhanced_monitoring.py  health.py  metrics.py  observability.py  structured_logging.py
healing_guard/performance/: __init__.py  auto_scaling.py  benchmarks.py  cache_manager.py  metrics_collector.py
healing_guard/security/: __init__.py  advanced_security.py  advanced_validator.py  enterprise_security.py  input_validator.py  scanner.py  validator.py
healing_guard/tenancy/: __init__.py  multi_tenant.py
helm/healing-guard/: Chart.yaml  values.yaml
helm/healing-guard/templates/: _helpers.tpl  deployment.yaml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
k8s/production/: configmap.yaml  deployment.yaml  namespace.yaml
monitoring/: prometheus.yml
scripts/: advanced-security-audit.sh  build.sh  check_security_policies.py  dev-setup.sh  generate_sbom.py  init-db.sql  lifecycle-automation.sh  maintenance.sh  production-deploy.sh  release.sh  security-hardening.sh  update_version.py  validate_config.py
tests/: conftest.py
tests/e2e/: test_healing_workflow.py
tests/fixtures/: __init__.py  pipeline_data.py
tests/integration/: test_api_integration.py  test_basic_functionality.py  test_enhanced_system.py  test_sentiment_api.py  test_webhook_processing.py
tests/performance/: locustfile.py  pytest_benchmarks.py  test_load_performance.py
tests/unit/: test_cli.py  test_failure_detector.py  test_failure_detector_enhanced.py  test_healing_engine.py  test_hybrid_quantum_optimization.py  test_models.py  test_quantum_planner.py  test_sentiment_analyzer.py
tests/utils/: __init__.py  assertions.py  test_helpers.py
translations/: en.json
